--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
     "convex": "^1.31.2",
+    "katex": "^0.16.27",
     "lightningcss-darwin-arm64": "^1.30.2",
     "lucide-react": "^0.562.0",
     "next": "^16.1.0",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-katex": "^3.1.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/katex": "^0.16.7",
+    "@types/react-katex": "^3.0.4"
   }
 }
