--- a/package.json
+++ b/package.json
@@ -9,7 +9,24 @@
     "lint": "next lint",
     "convex": "convex dev",
     "convex:deploy": "convex deploy",
-    "seed": "npx convex run seed:seedDatabase"
+    "seed": "npx convex run seed:seedDatabase",
+    "seed:clear": "npx convex run seed:clearDatabase",
+    "generate:graph": "npx convex run seed:seedGraphQuestions",
+    "generate:graph:clear": "npx convex run seed:clearGraphQuestions",
+    "generate:reading-data": "npx convex run seed:testGenerateReadingDataQuestion",
+    "generate:reading-data:batch": "npx convex run readingDataGeneration:batchGenerateReadingDataQuestions",
+    "generate:reading": "npx convex run seed:testGenerateReadingQuestion",
+    "generate:reading:batch": "npx convex run seed:batchGenerateReadingQuestions",
+    "dlq:data:stats": "npx convex run readingDataDLQ:getStats",
+    "dlq:data:pending": "npx convex run readingDataDLQ:getPendingItems",
+    "dlq:data:recent": "npx convex run readingDataDLQ:getRecentItems",
+    "dlq:data:retry": "npx convex run readingDataDLQ:retryPendingItems",
+    "dlq:data:clear-succeeded": "npx convex run readingDataDLQ:clearSucceeded",
+    "dlq:reading:stats": "npx convex run readingQuestionDLQ:getStats",
+    "dlq:reading:pending": "npx convex run readingQuestionDLQ:getPendingItems",
+    "dlq:reading:recent": "npx convex run readingQuestionDLQ:getRecentItems",
+    "dlq:reading:retry": "npx convex run readingQuestionDLQ:retryPendingItems",
+    "dlq:reading:clear-succeeded": "npx convex run readingQuestionDLQ:clearSucceeded"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
@@ -17,19 +34,26 @@
     "@google/genai": "^1.34.0",
     "@tailwindcss/oxide-darwin-arm64": "file:tailwindcss-oxide-darwin-arm64-4.1.18.tgz",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
+    "canvas-confetti": "^1.9.4",
     "convex": "^1.31.2",
+    "gray-matter": "^4.0.3",
+    "jspdf": "^3.0.4",
     "katex": "^0.16.27",
     "lightningcss-darwin-arm64": "^1.30.2",
     "lucide-react": "^0.562.0",
     "next": "^16.1.0",
+    "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-katex": "^3.1.0",
+    "reading-time": "^1.5.0",
+    "stripe": "^20.1.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "zustand": "^5.0.9"
