ok bout to regen

--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "lint": "next lint",
     "convex": "convex dev",
     "convex:deploy": "convex deploy",
-    "seed": "npx convex run seed:seedDatabase",
-    "seed:clear": "npx convex run seed:clearDatabase",
-    "generate:graph": "npx convex run seed:seedGraphQuestions",
+    "generate:reading": "node scripts/generate-reading.mjs",
+    "generate:reading-data": "node scripts/generate-reading-data.mjs",
+    "generate:math": "node scripts/generate-math.mjs",
+    "generate:clear": "npx convex run seed:clearDatabase",
     "generate:graph:clear": "npx convex run seed:clearGraphQuestions",
-    "generate:reading-data": "npx convex run seed:testGenerateReadingDataQuestion",
-    "generate:reading-data:batch": "npx convex run readingDataGeneration:batchGenerateReadingDataQuestions",
-    "generate:reading": "npx convex run seed:testGenerateReadingQuestion",
-    "generate:reading:batch": "npx convex run seed:batchGenerateReadingQuestions",
     "dlq:data:stats": "npx convex run readingDataDLQ:getStats",
     "dlq:data:pending": "npx convex run readingDataDLQ:getPendingItems",
     "dlq:data:recent": "npx convex run readingDataDLQ:getRecentItems",
