before ui changes and new reading questions

--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "dlq:reading:recent": "npx convex run readingQuestionDLQ:getRecentItems",
     "dlq:reading:retry": "npx convex run readingQuestionDLQ:retryPendingItems",
     "dlq:reading:clear-succeeded": "npx convex run readingQuestionDLQ:clearSucceeded",
+    "dlq:math:stats": "npx convex run mathQuestionDLQ:getStats",
+    "dlq:math:pending": "npx convex run mathQuestionDLQ:getPendingItems",
+    "dlq:math:recent": "npx convex run mathQuestionDLQ:getRecentItems",
+    "dlq:math:retry": "npx convex run mathQuestionDLQ:retryPendingItems",
+    "dlq:math:clear-succeeded": "npx convex run mathQuestionDLQ:clearSucceeded",
     "import:pdf": "npx convex run seed:importOfficialPdf",
     "import:stats": "npx convex run seed:getOfficialQuestionStats",
     "official:stats": "npx convex run officialQuestions:getImportStats",
