Update brand name from The1600Club to the1600Club and include package-lock.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "1600Club - SAT Prep",
-  "short_name": "1600Club",
+  "name": "the1600Club - SAT Prep",
+  "short_name": "the1600Club",
   "description": "Your path to the perfect SAT score. Gamified practice, adaptive learning, unlimited questions.",
   "start_url": "/",
   "display": "standalone",
