--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "convex": "convex dev",
     "convex:deploy": "convex deploy",
     "generate:reading": "node scripts/generate-reading.mjs",
@@ -67,10 +67,16 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "@serwist/next": "^9.0.12",
     "@types/katex": "^0.16.7",
     "@types/react-katex": "^3.0.4",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "globals": "^17.0.0",
     "serwist": "^9.0.12",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "typescript-eslint": "^8.51.0"
   }
 }
