Fix CI: run convex codegen before type check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --omit=optional
 
+      - name: Generate Convex types
+        run: npx convex codegen
+
       - name: Run ESLint
         run: npm run lint
 
@@ -37,27 +40,6 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # Dummy values for build validation
           NEXT_PUBLIC_CONVEX_URL: https://placeholder.convex.cloud
           NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: pk_test_placeholder
           CLERK_SECRET_KEY: sk_test_placeholder
-
-  convex-typecheck:
-    name: Convex Type Check
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci --omit=optional
-
-      - name: Convex codegen
-        run: npx convex codegen
