--- a/package.json
+++ b/package.json
@@ -78,5 +78,11 @@
     "serwist": "^9.0.12",
     "sharp": "^0.33.5",
     "typescript-eslint": "^8.51.0"
+  },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-darwin-arm64": "^4.1.18",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.18",
+    "lightningcss-darwin-arm64": "^1.30.2",
+    "lightningcss-linux-x64-gnu": "^1.30.2"
   }
 }
