--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, stage, prod]
+    branches: [main, prod]
   pull_request:
-    branches: [main, stage, prod]
+    branches: [main, prod]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
