--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "the1600Club - SAT Prep",
-  "short_name": "the1600Club",
+  "name": "the1600club - SAT Prep",
+  "short_name": "the1600club",
   "description": "Your path to the perfect SAT score. Gamified practice, adaptive learning, unlimited questions.",
   "start_url": "/",
   "display": "standalone",
