review and delete in admin mode

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "official:clear": "npx convex run officialQuestions:clearAll",
     "generate:icons": "node scripts/generate-icons.mjs",
     "review": "node scripts/review-questions.mjs",
+    "review:all": "bash -c 'while npm run review 2>&1 | tee /dev/stderr | grep -q \"Found.*questions\"; do sleep 2; done'",
     "review:stats": "npx convex run questionReviewBatch:getReviewStats",
+    "review:needs-revision": "npx convex run questionReviewBatch:getNeedsRevisionDetails",
     "export:questions": "node scripts/export-questions.mjs",
     "export:stats": "npx convex run questionExport:getExportStats",
     "import:questions": "node scripts/import-questions.mjs",
